Mobile-responsive done

--- a/index.html
+++ b/index.html
@@ -223,20 +223,20 @@
         </div>
         <div class="row container">
             <div class="col span_1_of_2 mix apps box">
-                 <img src="resources/img/portfolio1.png" alt="Isimetric Perspective Mockup" class="portfolio-image">
-                 <h4>Isimetric Perspective Mockup</h4>
+                <img src="resources/img/portfolio1.png" alt="Isimetric Perspective Mockup" class="portfolio-image">
+                <h4>Isimetric Perspective Mockup</h4>
             </div>
             <div class="col span_1_of_2 mix apps web box">
-                 <img src="resources/img/portfolio2.png" alt="Isimetric Perspective Mockup" class="portfolio-image">
-                 <h4>Isimetric Perspective Mockup</h4>
+                <img src="resources/img/portfolio2.png" alt="Isimetric Perspective Mockup" class="portfolio-image">
+                <h4>Isimetric Perspective Mockup</h4>
             </div>
             <div class="col span_1_of_2 mix icons box">
-                 <img src="resources/img/portfolio3.png" alt="Isimetric Perspective Mockup" class="portfolio-image">
-                 <h4>Isimetric Perspective Mockup</h4>
+                <img src="resources/img/portfolio3.png" alt="Isimetric Perspective Mockup" class="portfolio-image">
+                <h4>Isimetric Perspective Mockup</h4>
             </div>
             <div class="col span_1_of_2 mix icons web apps box">
-                 <img src="resources/img/portfolio4.png" alt="Isimetric Perspective Mockup" class="portfolio-image">
-                 <h4>Isimetric Perspective Mockup</h4>
+                <img src="resources/img/portfolio4.png" alt="Isimetric Perspective Mockup" class="portfolio-image">
+                <h4>Isimetric Perspective Mockup</h4>
             </div>
         </div>
         <div class="row">
@@ -245,107 +245,112 @@
     </section>
     <!-- Portfolio ends here -->
     <!-- Testimonial starts here -->
-<section class="testimonial-section" id="testimonial">
-    <div class="row">
-        <h2>What people say about us!</h2>
-        <p class="little-description">Our Clients love us</p>
-    </div>
-<div class="row">
-    <div class="col span_1_of_2 box">
-        <div class="client-photo">
-            <img src="resources/img/1.jpg" alt="Chanel Iman">
+    <section class="testimonial-section" id="testimonial">
+        <div class="row">
+            <h2>What people say about us!</h2>
+            <p class="little-description">Our Clients love us</p>
         </div>
-        <div class="client-review">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur blanditiis magni temporibus ea facere dicta nemo quae est libero asperiores.
-            </p>
-            <h3>Chanel Iman</h3>
-            <span class="role">CEO of Pinterest</span>
+        <div class="row">
+            <div class="col span_1_of_2 box">
+                <div class="client-photo">
+                    <img src="resources/img/1.jpg" alt="Chanel Iman">
+                </div>
+                <div class="client-review">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur blanditiis magni temporibus
+                        ea facere dicta nemo quae est libero asperiores.
+                    </p>
+                    <h3>Chanel Iman</h3>
+                    <span class="role">CEO of Pinterest</span>
+                </div>
+            </div>
+            <div class="col span_1_of_2 box">
+                <div class="client-photo">
+                    <img src="resources/img/2.jpg" alt="Chanel Iman">
+                </div>
+                <div class="client-review">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur blanditiis magni temporibus
+                        ea facere dicta nemo quae est libero asperiores.
+                    </p>
+                    <h3>Chanel Iman</h3>
+                    <span class="role">CEO of Pinterest</span>
+                </div>
+            </div>
+            <div class="col span_1_of_2 box">
+                <div class="client-photo">
+                    <img src="resources/img/3.jpg" alt="Chanel Iman">
+                </div>
+                <div class="client-review">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur blanditiis magni temporibus
+                        ea facere dicta nemo quae est libero asperiores.
+                    </p>
+                    <h3>Chanel Iman</h3>
+                    <span class="role">CEO of Pinterest</span>
+                </div>
+            </div>
+            <div class="col span_1_of_2 box">
+                <div class="client-photo">
+                    <img src="resources/img/4.jpg" alt="Chanel Iman">
+                </div>
+                <div class="client-review">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur blanditiis magni temporibus
+                        ea facere dicta nemo quae est libero asperiores.
+                    </p>
+                    <h3>Chanel Iman</h3>
+                    <span class="role">CEO of Pinterest</span>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="col span_1_of_2 box">
-        <div class="client-photo">
-            <img src="resources/img/2.jpg" alt="Chanel Iman">
-        </div>
-        <div class="client-review">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur blanditiis magni temporibus ea facere dicta nemo quae est libero asperiores.
-            </p>
-            <h3>Chanel Iman</h3>
-            <span class="role">CEO of Pinterest</span>
-        </div>
-    </div>
-    <div class="col span_1_of_2 box">
-        <div class="client-photo">
-            <img src="resources/img/3.jpg" alt="Chanel Iman">
-        </div>
-        <div class="client-review">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur blanditiis magni temporibus ea facere dicta nemo quae est libero asperiores.
-            </p>
-            <h3>Chanel Iman</h3>
-            <span class="role">CEO of Pinterest</span>
-        </div>
-    </div>
-    <div class="col span_1_of_2 box">
-        <div class="client-photo">
-            <img src="resources/img/4.jpg" alt="Chanel Iman">
-        </div>
-        <div class="client-review">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur blanditiis magni temporibus ea facere dicta nemo quae est libero asperiores.
-            </p>
-            <h3>Chanel Iman</h3>
-            <span class="role">CEO of Pinterest</span>
-        </div>
-    </div>
-</div>
-</section>
-  <!-- Testimonial ends here -->
-<!-- contact Section starts here -->
+    </section>
+    <!-- Testimonial ends here -->
+    <!-- contact Section starts here -->
 
-<section class="contact-section" id="contact">
-<div class="row">
-    <h2>Get In Touch</h2>
-    <p class="little-description">
-        1600 Pennsylvania AVENEW, WASHINGTON, DC 20500, United States of America. Tel: (202) 456 -1111
-    </p>
-</div>
-<div class="row">
-    <form action="https://formspree.io/f/xqkwlloa" method="POST">
-<div class="row">
-    <div class="col span_1_of_2">
-        <input type="text" name="Name" placeholder="Enter Your Name *" required>
-    </div>
-    <div class="col span_1_of_2">
-        <input type="email" name="Email" placeholder="Enter Your Email Address *" required>
+    <section class="contact-section" id="contact">
+        <div class="row">
+            <h2>Get In Touch</h2>
+            <p class="little-description">
+                1600 Pennsylvania AVENEW, WASHINGTON, DC 20500, United States of America. Tel: (202) 456 -1111
+            </p>
         </div>
-</div>
-<div class="row">
-   <textarea name="message"  cols="30" rows="10" placeholder="Your Message *" required>Message</textarea>
-</div>
-<input class="btn btn-submit" type="submit" value="Send Message">
-    </form>
-</div>
-</section>
-<!-- contact Section ends here -->
-<!-- FOOTER Section STARTS here -->
-<footer class="footer-section">
-    <div class="row">
-          <ul>
-              <li><a href="">facebook</a></li>
-              <li><a href="">twitter</a></li>
-              <li><a href="">instagram</a></li>
-              <li><a href="">inkedIn</a></li>
-              <li><a href="">google+</a></li>
-              <li><a href="">behance</a></li>
-              <li><a href="">dribble</a></li>
-          </ul>
-    </div>
-</footer>
-<!-- contact Section ends here -->
+        <div class="row">
+            <form action="https://formspree.io/f/xqkwlloa" method="POST">
+                <div class="row">
+                    <div class="col span_1_of_2">
+                        <input type="text" name="Name" placeholder="Enter Your Name *" required>
+                    </div>
+                    <div class="col span_1_of_2">
+                        <input type="email" name="Email" placeholder="Enter Your Email Address *" required>
+                    </div>
+                </div>
+                <div class="row">
+                    <textarea name="message" cols="30" rows="10" placeholder="Your Message *"
+                        required>Message</textarea>
+                </div>
+                <input class="btn btn-submit" type="submit" value="Send Message">
+            </form>
+        </div>
+    </section>
+    <!-- contact Section ends here -->
+    <!-- FOOTER Section STARTS here -->
+    <footer class="footer-section">
+        <div class="row">
+            <ul>
+                <li><a href="">facebook</a></li>
+                <li><a href="">twitter</a></li>
+                <li><a href="">instagram</a></li>
+                <li><a href="">inkedIn</a></li>
+                <li><a href="">google+</a></li>
+                <li><a href="">behance</a></li>
+                <li><a href="">dribble</a></li>
+            </ul>
+        </div>
+    </footer>
+    <!-- contact Section ends here -->
 
-  
+
 
 
 
