--- a/index.html
+++ b/index.html
@@ -29,13 +29,27 @@
                 <a href="#home"> <img src="resources/img/logo.png" alt="Cuda" class="logo">
                 </a>
                 <ul class="main-nav">
-                    <li class="active"><a href="#home">Home</a></li>
+                    <li><a class="active" href="#home">Home</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#team">Team</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
+                <div class="mobile-menu">
+                    <span style="color: #fff;" onclick="openNav()">&#9776;</span>
+                    <div id="myNav" class="overlay" >
+                    <a href="javascript:void()" onclick="closeNav()" class="closebtn">&times;</a>
+                    <div class="overlay-content">
+                        <a onclick="closeNav()" href="#home">Home</a>
+                        <a onclick="closeNav()"href="#services">Services</a>
+                        <a onclick="closeNav()"href="#team">Team</a>
+                        <a onclick="closeNav()"href="#skills">Skills</a>
+                        <a onclick="closeNav()"href="#portfolio">Portfolio</a>
+                        <a onclick="closeNav()" href="#contact">Contact</a>
+                    </div>
+                 </div>
+                </div>
             </div>
         </nav>
         <div class="row">
